plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {//todo: 안쓰는 의존성이나 deprecated된 의존성 제거
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.mysql:mysql-connector-j:8.2.0'
    implementation 'org.hibernate:hibernate-core:6.3.0.CR1'
    implementation 'org.springframework.data:spring-data-redis:3.1.2'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.springframework.security:spring-security-core:6.1.2'
    implementation 'org.springframework.security:spring-security-config:6.1.2'
    implementation 'org.springframework.security:spring-security-web:6.1.2'
    implementation 'io.lettuce:lettuce-core:6.2.5.RELEASE'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.470'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:2.2.224'
    testImplementation 'io.rest-assured:rest-assured:5.4.0'

    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor(
            'com.querydsl:querydsl-apt:5.0.0:jakarta',
            'jakarta.persistence:jakarta.persistence-api:3.1.0',
            'jakarta.annotation:jakarta.annotation-api:2.1.1'
    )
}

tasks.named('test') {
    useJUnitPlatform()
}

sourceSets {
    main.java.srcDirs += ['build/generated/sources/annotationProcessor/java/main']
}

compileJava {
    options.annotationProcessorGeneratedSourcesDirectory = file('build/generated/sources/annotationProcessor/java/main')
}